--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "scripts": {
+    "dev": "vite",  
+    "build": "vite build", 
+    "preview": "vite preview"  
+  },
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"vite": "^5.3.5"
 	}
 }
